# graphicViz

./: .gitignore
Practica1Grafica/: CMakeLists.txt  igvInterfaz.cpp  igvInterfaz.h  pr1.cpp
Practica2aGrafica/: CMakeLists.txt  igvEscena3D.cpp  igvEscena3D.h  igvInterfaz.cpp  pr2a.cpp
Practica2bGrafica/: CMakeLists.txt  igvCamara.cpp  igvCamara.h  igvEscena3D.cpp  igvEscena3D.h  igvInterfaz.cpp  igvInterfaz.h  igvPunto3D.h  pr2b.cpp
Practica3aGrafica/: CMakeLists.txt  igvEscena3D.cpp  igvInterfaz.cpp  igvMallaTriangulos.cpp  igvMallaTriangulos.h
